[package]
name = "log_seq"
version = "0.2.0"
edition = "2021"

[dependencies]
log = { version = "0.4.0", features = ["std"] }
ureq = { version = "2.6" }
chrono = "0.4.24"
serde = "1.0"
serde_json = "1.0"
# reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# [dependencies.tokio]
# version = "1.0"
# features = ["macros", "rt-multi-thread", "time"]

[profile.release]
strip = true
